syntax = "proto3";

package proximal.proxy.v1;

option go_package = "github.com/apoxy-dev/proximal/api/proxy/v1;proxyv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "api/endpoint/v1/endpoint.proto";


message Proxy {
  string key = 1;
  string default_endpoint = 2;
  repeated string endpoints = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateProxyRequest {
  string key = 1;
  string default_endpoint = 2;
  repeated string endpoints = 3;
}

message ListProxyEndpointsRequest {
  string key = 1;
}

message ListProxyEndpointsResponse {
  repeated endpoints.v1.Endpoint endpoints = 1;
}

message AttachProxyEndpointsRequest {
  // Proxy key to attach endpoints to.
  string key = 1;

  // Endpoints to attach to the proxy. If already attached, will be ignored.
  // If one or more endpoints are not found, the entire request will fail.
  repeated string endpoints = 2;

  // If set, will reset default endpoint of the proxy. Does not need to be
  // included in the endpoints list. If does not exist, will fail entire request
  // and not attach any endpoints.
  string default_endpoint = 3;
}

message DetachProxyEndpointsRequest {
  // Proxy key to detach endpoints from.
  string key = 1;

  // Endpoints to detach from the proxy. If not attached, will be ignored.
  // If one of the endpoints is default endpoint, will fail entire request and
  // not detach any endpoints.
  repeated string endpoints = 2;
}

message DeleteProxyRequest {
  string key = 1;
}

service ProxyService {
  rpc CreateProxy(CreateProxyRequest) returns (Proxy) {
    option (google.api.http) = {
      post: "/v1/proxy"
      body: "*"
    };
  }

  rpc UpdateProxy(Proxy) returns (Proxy) {
    option (google.api.http) = {
      put: "/v1/proxy/{key}"
      body: "*"
    };
  }

  rpc ListProxyEndpoints(ListProxyEndpointsRequest) returns (ListProxyEndpointsResponse) {
    option (google.api.http) = {
      get: "/v1/proxy/{key}/endpoints"
    };
  }

  rpc DeleteProxy(DeleteProxyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/proxy/{key}"
    };
  }

  rpc AttachProxyEndpoints(AttachProxyEndpointsRequest) returns (Proxy) {
    option (google.api.http) = {
      post: "/v1/proxy/{key}/endpoints"
      body: "*"
    };
  }

  rpc DetachProxyEndpoints(DetachProxyEndpointsRequest) returns (Proxy) {
    option (google.api.http) = {
      delete: "/v1/proxy/{key}/endpoints"
    };
  }
}
